Add Cloudflare deployment configuration and fix YouTube processing
- Add Cloudflare Pages configuration (pages.toml)
- Add Cloudflare Workers configuration (wrangler.toml)
- Add Workers API proxy code (src/index.js)
- Add Vercel configuration (vercel.json)
- Fix YouTube scraper with memo existence checks
- Add processing time display in frontend
- Add delete functionality for processing memos
- Add Supabase getMemo method
- Add deployment documentation
- Fix Auth0 integration
- Add multi-language subtitle support
- Remove sensitive information from start.sh

--- a/server/env.example
+++ b/server/env.example
@@ -2,10 +2,13 @@
 
 # OpenAI API Configuration
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-5
+OPENAI_MODEL=gpt-4o
 OPENAI_TEMPERATURE=0.3
 OPENAI_TEMPERATURE_SUMMARY=0.3
-OPENAI_TEMPERATURE_CHAT=0.7
+OPENAI_TEMPERATURE_CHAT=0.3
+OPENAI_MODEL_SUMMARY=gpt-4o
+OPENAI_MODEL_CHAT=gpt-4o
+OPENAI_MAX_TOKENS_CHAT=1000
 
 # Server Configuration
 PORT=3001
@@ -16,3 +19,19 @@ DATABASE_PATH=./data/flymemo.db
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000
+
+# Domain Configuration
+DOMAIN=x.mymemo.ai
+FRONTEND_URL=https://x.mymemo.ai
+BACKEND_URL=https://api.x.mymemo.ai
+
+# Supabase Configuration
+SUPABASE_URL=your-supabase-project-url
+SUPABASE_ANON_KEY=your-supabase-anon-key
+
+# Auth0 Configuration
+AUTH0_DOMAIN=your-auth0-domain.auth0.com
+AUTH0_CLIENT_ID=your-auth0-client-id
+AUTH0_CLIENT_SECRET=your-auth0-client-secret
+AUTH0_AUDIENCE=https://dev-supk23n0xgucx0no.us.auth0.com/api/v2/
+AUTH0_ISSUER=https://your-auth0-domain.auth0.com/
