--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@distube/ytdl-core": "^4.16.12",
+    "@supabase/supabase-js": "^2.58.0",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-jwt": "^8.5.1",
+    "express-oauth-server": "^2.0.0",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-client": "^2.1.0",
     "openai": "^4.20.1",
     "puppeteer": "^21.5.2",
     "sqlite3": "^5.1.6",
