--- a/railway.toml
+++ b/railway.toml
@@ -1,26 +1,9 @@
-# Railway deployment configuration
-FROM node:18-alpine
+[build]
+builder = "NIXPACKS"
 
-WORKDIR /app
-
-# Install system dependencies
-RUN apk add --no-cache python3 py3-pip ffmpeg
-
-# Install yt-dlp
-RUN pip3 install yt-dlp
-
-# Copy package files
-COPY server/package*.json ./
-RUN npm ci --only=production
-
-# Copy source code
-COPY server/src ./src
-COPY shared ./shared
-
-# Set environment variables
-ENV NODE_ENV=production
-ENV YT_DLP_PATH=/usr/local/bin/yt-dlp
-
-EXPOSE 3001
-
-CMD ["npm", "start"]
+[deploy]
+startCommand = "cd server && npm start"
+healthcheckPath = "/api/health"
+healthcheckTimeout = 300
+restartPolicyType = "ON_FAILURE"
+restartPolicyMaxRetries = 10
