Fix Railway build command to use server directory

--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,6 @@
 [build]
 builder = "NIXPACKS"
+buildCommand = "cd server && npm ci"
 
 [deploy]
 startCommand = "cd server && npm run build && npm start"
