--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,23 +1,24 @@
-# Railway deployment configuration - Multi-stage build for faster deployment
-FROM node:18-alpine AS builder
+# Simplified Dockerfile for Railway - Minimal dependencies
+FROM node:18-alpine
 
 WORKDIR /app
 
-# Install system dependencies
-RUN apk add --no-cache python3 py3-pip ffmpeg curl
+# Install minimal system dependencies
+RUN apk add --no-cache curl
 
-# Install yt-dlp using curl (more reliable)
+# Install yt-dlp
 RUN curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp && \
     chmod a+rx /usr/local/bin/yt-dlp
 
-# Copy package files first for better caching
+# Copy package files
 COPY server/package*.json ./
 
-# Install ALL dependencies (including dev dependencies for build)
-RUN npm config set fetch-timeout 300000 && \
-    npm config set fetch-retry-mintimeout 20000 && \
-    npm config set fetch-retry-maxtimeout 120000 && \
-    npm ci
+# Install dependencies with aggressive timeout settings
+RUN npm config set fetch-timeout 600000 && \
+    npm config set fetch-retry-mintimeout 30000 && \
+    npm config set fetch-retry-maxtimeout 300000 && \
+    npm config set fetch-retries 5 && \
+    npm install --production --no-optional
 
 # Copy source code
 COPY server/src ./src
@@ -25,30 +26,6 @@ COPY shared ./shared
 
 # Build TypeScript
 RUN npm run build
-
-# Production stage
-FROM node:18-alpine AS production
-
-WORKDIR /app
-
-# Install only runtime dependencies
-RUN apk add --no-cache python3 py3-pip ffmpeg curl
-
-# Copy yt-dlp from builder stage
-COPY --from=builder /usr/local/bin/yt-dlp /usr/local/bin/yt-dlp
-
-# Copy package files
-COPY server/package*.json ./
-
-# Install only production dependencies
-RUN npm config set fetch-timeout 300000 && \
-    npm config set fetch-retry-mintimeout 20000 && \
-    npm config set fetch-retry-maxtimeout 120000 && \
-    npm ci --only=production && \
-    npm cache clean --force
-
-# Copy built application from builder stage
-COPY --from=builder /app/dist ./dist
 
 # Set environment variables
 ENV NODE_ENV=production
