--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,5 @@
 [build]
-builder = "DOCKERFILE"
-dockerfilePath = "server/Dockerfile"
+builder = "NIXPACKS"
 
 [deploy]
 healthcheckPath = "/api/health"
